--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@ If you have not opened a Legendary Brawler, though, it might be a blessing in di
  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 
 
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
 
 
 
