--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ If you have not opened a Legendary Brawler, though, it might be a blessing in di
 </head>
 
 
+<head>
+<script src=script.js">
+                     </script>
+
+</head>
+
 
 
 
