--- a/index.html
+++ b/index.html
@@ -63,14 +63,11 @@ If you have not opened a Legendary Brawler, though, it might be a blessing in di
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 
-<head>
-<script src=script.js">
-                     </script>
 
-</head>
 
 
 
